<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_list_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/list_txt_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/txt_list_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/list_txt_type"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/txt_list_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/list_txt_price"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/quantity_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/txt_list_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            tools:text="100" />

        <TextView
            android:id="@+id/tbl_list_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_list_quantity"
            android:gravity="center"
            android:text="@string/list_txt_quantity"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/btn_list_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tbl_list_quantity"
            android:focusable="false"
            android:text="@string/list_btn_buy" />

    </RelativeLayout>

</LinearLayout>